# MulticastSender

./: CMakeLists.txt  LoggingLib  todo.txt
include/: DaemonLib.hpp  Helpers.hpp  MulticastSenderLib.hpp
src/: Helpers.cpp  MulticastSenderLib.cpp  main.cpp  samples.txt
src/DaemonLib/: DaemonLib.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MulticastSenderTest.cpp  cmake_install.cmake
